src/objects/AccountUserRole__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account User Roles</relationshipLabel>
        <relationshipName>AccountUserRoles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AccountUserRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AccountUserRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountUserRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account User Role</label>
    <nameField>
        <displayFormat>UR-{0000}</displayFormat>
        <label>AccountUserRole Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountUserRoles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>